--- a/paginas/carrinho.html
+++ b/paginas/carrinho.html
@@ -6,10 +6,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- SEO principal -->
-  <title>Meu Carrinho | AssociArte Marketplace</title>
+  <title>Meu Carrinho | ASSOCIARTE Marketplace</title>
   <meta name="robots" content="noindex, nofollow">
-  <!-- Favicon-->
-  <link rel="shortcut icon" href="../assets/img/favicon.ico">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <!-- Apple (iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <!-- Android / PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+  <!-- Favicon Padrão -->
+  <link rel="icon" href="/assets/img/favicon.ico">
   <!-- CSS base -->
   <link rel="stylesheet" href="../assets/css/base/base.css">
   <link rel="stylesheet" href="../assets/css/base/variaveis.css">
@@ -28,7 +36,7 @@
   <!-- CABEÇALHO FIXO -->
   <header>
     <a href="/index.html" class="logo-container" title="Voltar para a página inicial">
-      <img src="../assets/img/logo-300.png" alt="Logo AssociArte" />
+      <img src="../assets/img/logo-300.png" alt="Logo ASSOCIARTE" />
     </a>
   </header>
 
@@ -38,7 +46,7 @@
     <section class="carrinho-header">
       <h1>Meu Carrinho</h1>
       <p class="carrinho-info">
-        O AssociArte Marketplace atua como intermediador. O contato com os vendedores será exibido após a confirmação.
+        O ASSOCIARTE Marketplace atua como intermediador. O contato com os vendedores será exibido após a confirmação.
       </p>
     </section>
 
@@ -67,7 +75,7 @@
   <footer class="rodape">
     <div class="rodape-container">
       <section class="rodape-col">
-        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da ASSOCIARTE">
         <p>
           A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
           dedicada à valorização do artesanato local, fortalecimento da cultura regional
@@ -92,7 +100,7 @@
       <section class="rodape-col">
         <h4>Redes sociais</h4>
         <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
-          aria-label="Instagram da Associação AssociArte">
+          aria-label="Instagram da Associação ASSOCIARTE">
           <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
         </a>
       </section>
