--- a/paginas/conta.html
+++ b/paginas/conta.html
@@ -5,28 +5,37 @@
   <!-- Básico-->
   <meta charset="UTF-8" />
   <!-- SEO -->
-  <title>AssociArte - Perfil do Usuário</title>
+  <title>ASSOCIARTE - Perfil do Usuário</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Atualize seus dados pessoais, visualize seus produtos e gerencie sua conta no AssociArte Marketplace." />
-  <meta name="keywords" content="perfil, conta, usuário, AssociArte, Marketplace, produtos, atualização de dados" />
+    content="Atualize seus dados pessoais, visualize seus produtos e gerencie sua conta no ASSOCIARTE Marketplace." />
+  <meta name="keywords" content="perfil, conta, usuário, ASSOCIARTE, Marketplace, produtos, atualização de dados" />
   <meta name="author" content="Victor Manoel" />
   <meta name="robots" content="noindex, nofollow" />
   <!-- Open Graph -->
-  <meta property="og:title" content="AssociArte - Perfil do Usuário" />
+  <meta property="og:title" content="ASSOCIARTE - Perfil do Usuário" />
   <meta property="og:description"
-    content="Gerencie seu perfil e visualize os produtos que você publicou no AssociArte Marketplace." />
+    content="Gerencie seu perfil e visualize os produtos que você publicou no ASSOCIARTE Marketplace." />
   <meta property="og:image" content="https://associarte-marketplace.vercel.app.com/assets/img/logo-300.png" />
   <meta property="og:url" content="https://associarte-marketplace.vercel.app.com/paginas/conta.html" />
   <meta property="og:type" content="website" />
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="AssociArte - Perfil do Usuário" />
+  <meta name="twitter:title" content="ASSOCIARTE - Perfil do Usuário" />
   <meta name="twitter:description"
-    content="Gerencie seu perfil e visualize os produtos que você publicou no AssociArte Samavi." />
+    content="Gerencie seu perfil e visualize os produtos que você publicou no ASSOCIARTE Samavi." />
   <meta name="twitter:image" content="https://associarte-marketplace.vercel.app.com/assets/img/logo-300.png" />
-  <!-- Favicon e Icones -->
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <!-- PNGs clássicos -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <!-- Apple (iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <!-- Android / PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+  <!-- Favicon Padrão -->
+  <link rel="icon" href="/assets/img/favicon.ico">
+  <!-- Icones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- Básico -->
   <link rel="stylesheet" href="../assets/css/base/variaveis.css" />
@@ -184,7 +193,7 @@
   <footer class="rodape">
     <div class="rodape-container">
       <section class="rodape-col">
-        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da ASSOCIARTE">
         <p>
           A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
           dedicada à valorização do artesanato local, fortalecimento da cultura regional
@@ -209,7 +218,7 @@
       <section class="rodape-col">
         <h4>Redes sociais</h4>
         <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
-          aria-label="Instagram da Associação AssociArte">
+          aria-label="Instagram da Associação ASSOCIARTE">
           <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
         </a>
       </section>
