--- a/paginas/login.html
+++ b/paginas/login.html
@@ -6,11 +6,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- SEO principal -->
-  <title>Entrar | AssociArte Marketplace</title>
-  <meta name="description" content="Acesse sua conta no AssociArte Marketplace.">
+  <title>Entrar | ASSOCIARTE Marketplace</title>
+  <meta name="description" content="Acesse sua conta no ASSOCIARTE Marketplace.">
   <meta name="robots" content="noindex, nofollow">
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+  <!-- PNGs clássicos -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <!-- Apple (iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <!-- Android / PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+  <!-- Favicon Padrão -->
+  <link rel="icon" href="/assets/img/favicon.ico">
   <!-- Fontes e ícones -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet"
@@ -29,7 +37,7 @@
 <body>
   <div id="feedback" role="alert" aria-live="assertive"></div>
   <main>
-    <section id="login" aria-label="Formulário de login do AssociArte Marketplace">
+    <section id="login" aria-label="Formulário de login do ASSOCIARTE Marketplace">
       <div id="imagem" role="presentation" aria-hidden="true"></div>
 
       <div id="formulario">
