--- a/paginas/pedidos.html
+++ b/paginas/pedidos.html
@@ -4,10 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meus Pedidos | AssociArte Marketplace</title>
+  <title>Meus Pedidos | ASSOCIARTE Marketplace</title>
   <meta name="robots" content="noindex, nofollow">
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+  <!-- PNGs clássicos -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <!-- Apple (iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <!-- Android / PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+  <!-- Favicon Padrão -->
+  <link rel="icon" href="/assets/img/favicon.ico">
   <!-- Fontes e ícones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- CSS base -->
@@ -84,7 +92,7 @@
   <footer class="rodape">
     <div class="rodape-container">
       <section class="rodape-col">
-        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da ASSOCIARTE">
         <p>
           A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
           dedicada à valorização do artesanato local, fortalecimento da cultura regional
@@ -109,7 +117,7 @@
       <section class="rodape-col">
         <h4>Redes sociais</h4>
         <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
-          aria-label="Instagram da Associação AssociArte">
+          aria-label="Instagram da Associação ASSOCIARTE">
           <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
         </a>
       </section>
