--- a/paginas/vendedor.html
+++ b/paginas/vendedor.html
@@ -8,23 +8,31 @@
     <!-- SEO principal -->
     <title>Perfil do Vendedor | AssociArte Marketplace</title>
     <meta name="description"
-        content="Conheça o perfil do vendedor no AssociArte Marketplace e explore produtos artesanais, sustentáveis e produzidos localmente.">
-    <meta name="keywords" content="vendedor, produtos artesanais, marketplace local, sustentabilidade, AssociArte">
-    <meta name="author" content="AssociArte Marketplace">
+        content="Conheça o perfil do vendedor no ASSOCIARTE Marketplace e explore produtos artesanais, sustentáveis e produzidos localmente.">
+    <meta name="keywords" content="vendedor, produtos artesanais, marketplace local, sustentabilidade, ASSOCIARTE">
+    <meta name="author" content="ASSOCIARTE Marketplace">
     <meta name="robots" content="index, follow">
     <!-- Open Graph (Facebook, WhatsApp, etc.) -->
-    <meta property="og:title" content="Perfil do Vendedor | AssociArte Marketplace">
-    <meta property="og:description" content="Veja os produtos e informações do vendedor no AssociArte Marketplace.">
+    <meta property="og:title" content="Perfil do Vendedor | ASSOCIARTE Marketplace">
+    <meta property="og:description" content="Veja os produtos e informações do vendedor no ASSOCIARTE Marketplace.">
     <meta property="og:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
     <meta property="og:url" content="https://associarte-marketplace.vercel.app/paginas/vendedor.html">
     <meta property="og:type" content="profile">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Perfil do Vendedor | AssociArte Marketplace">
-    <meta name="twitter:description" content="Conheça os produtos e a história do vendedor no AssociArte Marketplace.">
+    <meta name="twitter:title" content="Perfil do Vendedor | ASSOCIARTE Marketplace">
+    <meta name="twitter:description" content="Conheça os produtos e a história do vendedor no ASSOCIARTE Marketplace.">
     <meta name="twitter:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
+    <!-- PNGs clássicos -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+    <!-- Apple (iOS) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+    <!-- Android / PWA -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+    <!-- Favicon Padrão -->
+    <link rel="icon" href="/assets/img/favicon.ico">
     <!-- Ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Estilos base -->
