--- a/index.html
+++ b/index.html
@@ -7,26 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- SEO principal -->
-    <title>AssociArte Marketplace</title>
+    <title>ASSOCIARTE Marketplace</title>
     <meta name="description"
-        content="AssociArte Marketplace é um mercado digital de produtos artesanais e sustentáveis, conectando a associação a consumidores conscientes.">
+        content="ASSOCIARTE Marketplace é um mercado digital de produtos artesanais e sustentáveis, conectando a associação a consumidores conscientes.">
     <meta name="author" content="Victor Manoel">
     <meta name="robots" content="index, follow">
     <!-- Open Graph (Facebook, WhatsApp, LinkedIn) -->
-    <meta property="og:title" content="AssociArte Marketplace">
+    <meta property="og:title" content="ASSOCIARTE Marketplace">
     <meta property="og:description"
-        content="Marketplace de produtos artesanais, sustentáveis e regionais da associação AssociArte.">
+        content="Marketplace de produtos artesanais, sustentáveis e regionais da associação ASSOCIARTE.">
     <meta property="og:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
     <meta property="og:url" content="https://associarte-marketplace.vercel.app/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="pt_BR">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="AssociArte Marketplace">
-    <meta name="twitter:description" content="Produtos artesanais e sustentáveis vendidos pela associação AssociArte.">
+    <meta name="twitter:title" content="ASSOCIARTE Marketplace">
+    <meta name="twitter:description" content="Produtos artesanais e sustentáveis vendidos pela associação ASSOCIARTE.">
     <meta name="twitter:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
-    <!-- Favicon -->
-    <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <!-- PNGs clássicos -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+    <!-- Apple (iOS) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+    <!-- Android / PWA -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+    <!-- Favicon Padrão -->
+    <link rel="icon" href="/assets/img/favicon.ico">
     <!-- Fontes e ícones -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,7 +60,7 @@
             <!-- BARRA DE NAVEGAÇÃO -->
             <nav class="navbar">
                 <div class="logo">
-                    <img src="../assets/img/logo.png" alt="Logo AssociArte">
+                    <img src="../assets/img/logo.png" alt="Logo ASSOCIARTE Marketplace">
                 </div>
                 <!-- MENU PRINCIPAL -->
                 <nav>
@@ -152,7 +160,7 @@
     <footer class="rodape">
         <div class="rodape-container">
             <section class="rodape-col">
-                <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+                <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da ASSOCIARTE">
                 <p>
                     A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
                     dedicada à valorização do artesanato local, fortalecimento da cultura regional
@@ -177,7 +185,7 @@
             <section class="rodape-col">
                 <h4>Redes sociais</h4>
                 <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
-                    aria-label="Instagram da Associação AssociArte">
+                    aria-label="Instagram da Associação ASSOCIARTE">
                     <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
                 </a>
             </section>
