--- a/paginas/add-produto.html
+++ b/paginas/add-produto.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <!-- Básico -->
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- SEO principal-->
-  <title>Adicionar Produto | AssociArte Marketplace</title>
+  <title>Adicionar Produto | ASSOCIARTE Marketplace</title>
   <meta name="robots" content="noindex, nofollow">
-  <!-- Favicon e Icones -->
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
+  <!-- PNGs clássicos -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <!-- Apple (iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <!-- Android / PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+  <!-- Favicon Padrão -->
+  <link rel="icon" href="/assets/img/favicon.ico">
+  <!-- Icones -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- CSS base -->
   <link rel="stylesheet" href="../assets/css/base/variaveis.css">
   <link rel="stylesheet" href="../assets/css/base/base.css">
@@ -19,12 +29,13 @@
   <link rel="stylesheet" href="../assets/css/componentes/feedback.css">
   <link rel="stylesheet" href="../assets/css/componentes/preview.css">
   <!-- Página -->
-  <link rel="stylesheet" href="../assets/css/paginas/addprod.css"/>
+  <link rel="stylesheet" href="../assets/css/paginas/addprod.css" />
 </head>
+
 <body>
   <header>
     <a href="/index.html" class="logo-container" title="Voltar para a página inicial">
-      <img src="../assets/img/logo-300.png" alt="Logo AssociArte" />
+      <img src="../assets/img/logo-300.png" alt="Logo ASSOCIARTE" />
     </a>
     <nav class="header-nav">
       <a href="../paginas/produtos.html" class="btn-voltar" title="Voltar à página de produtos"
@@ -101,4 +112,5 @@
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script type="module" src="../assets/js/pages/add-produto.js"></script>
 </body>
+
 </html>
