--- a/paginas/contatos.html
+++ b/paginas/contatos.html
@@ -5,13 +5,21 @@
   <!-- Básico -->
   <meta charset="UTF-8" />
   <!-- SEO principal -->
-  <title>AssociArte - Contatos</title>
+  <title>ASSOCIARTE - Contatos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Página de contato do AssociArte Marketplace. Envie sugestões ou fale conosco.">
+  <meta name="description" content="Página de contato do ASSOCIARTE Marketplace. Envie sugestões ou fale conosco.">
   <meta name="author" content="Victor Manooel">
-  <meta name="keywords" content="contato, AssociArte, Samavi, feedback, ecomercado, ecológico, sustentável">
-  <!-- Favicon -->
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <meta name="keywords" content="contato, ASSOCIARTE, Samavi, feedback, ecomercado, ecológico, sustentável">
+  <!-- PNGs clássicos -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <!-- Apple (iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <!-- Android / PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+  <!-- Favicon Padrão -->
+  <link rel="icon" href="/assets/img/favicon.ico">
   <!-- CSS base -->
   <link rel="stylesheet" href="../assets/css/base/variaveis.css">
   <link rel="stylesheet" href="../assets/css/base/base.css">
@@ -35,7 +43,7 @@
   </header>
 
   <main class="contatos-page">
-    <img src="../assets/img/logo.png" alt="Logo AssociArte" class="logo-contato" />
+    <img src="../assets/img/logo.png" alt="Logo ASSOCIARTE" class="logo-contato" />
 
     <section class="feedback-section">
       <h2>Envie seu feedback</h2>
@@ -61,7 +69,7 @@
   <footer class="rodape">
     <div class="rodape-container">
       <section class="rodape-col">
-        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da ASSOCIARTE">
         <p>
           A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
           dedicada à valorização do artesanato local, fortalecimento da cultura regional
@@ -86,7 +94,7 @@
       <section class="rodape-col">
         <h4>Redes sociais</h4>
         <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
-          aria-label="Instagram da Associação AssociArte">
+          aria-label="Instagram da Associação ASSOCIARTE">
           <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
         </a>
       </section>
