--- a/paginas/detalhes-produto.html
+++ b/paginas/detalhes-produto.html
@@ -5,13 +5,22 @@
   <!-- Básico -->
   <meta charset="UTF-8" />
   <!-- SEO principal -->
-  <title>Detalhes do Produto | AssociArte Marketplace</title>
+  <title>Detalhes do Produto | ASSOCIARTE Marketplace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
-    content="Detalhes completos do produto no AssociArte Marketplace. Conheça as características, preço e adquira produtos sustentáveis com facilidade." />
+    content="Detalhes completos do produto no ASSOCIARTE Marketplace. Conheça as características, preço e adquira produtos sustentáveis com facilidade." />
   <meta name="author" content="Victor Manoel" />
-  <!-- Favicon e Icones -->
-  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon" />
+  <!-- PNGs clássicos -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <!-- Apple (iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <!-- Android / PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+  <!-- Favicon Padrão -->
+  <link rel="icon" href="/assets/img/favicon.ico">
+  <!-- Icones -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   <!-- CSS base -->
   <link rel="stylesheet" href="../assets/css/base/base.css">
@@ -110,7 +119,7 @@
   <footer class="rodape">
     <div class="rodape-container">
       <section class="rodape-col">
-        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da ASSOCIARTE">
         <p>
           A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
           dedicada à valorização do artesanato local, fortalecimento da cultura regional
@@ -135,7 +144,7 @@
       <section class="rodape-col">
         <h4>Redes sociais</h4>
         <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
-          aria-label="Instagram da Associação AssociArte">
+          aria-label="Instagram da Associação ASSOCIARTE">
           <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
         </a>
       </section>
