--- a/paginas/produtos.html
+++ b/paginas/produtos.html
@@ -3,19 +3,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- SEO principal -->
-  <title>Produtos | AssociArte Marketplace</title>
+  <title>Produtos | ASSOCIARTE Marketplace</title>
   <meta name="description"
-    content="Explore os produtos artesanais e sustentáveis disponíveis no AssociArte Marketplace.">
-  <meta name="author" content="AssociArte Marketplace">
+    content="Explore os produtos artesanais e sustentáveis disponíveis no ASSOCIARTE Marketplace.">
+  <meta name="author" content="ASSOCIARTE Marketplace">
   <meta name="robots" content="index, follow">
   <!-- Open Graph -->
-  <meta property="og:title" content="Produtos | AssociArte Marketplace">
-  <meta property="og:description" content="Produtos artesanais e sustentáveis da associação AssociArte.">
+  <meta property="og:title" content="Produtos | ASSOCIARTE Marketplace">
+  <meta property="og:description" content="Produtos artesanais e sustentáveis da associação ASSOCIARTE.">
   <meta property="og:image" content="https://associarte-marketplace.vercel.app/assets/img/banner.png">
   <meta property="og:url" content="https://associarte-marketplace.vercel.app/paginas/produtos.html">
   <meta property="og:type" content="website">
-  <!-- Favicon & ICONS -->
-  <link rel="icon" href="../assets/img/favicon.ico">
+  <!-- PNGs clássicos -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <!-- Apple (iOS) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <!-- Android / PWA -->
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/android-chrome-512x512.png">
+  <!-- Favicon Padrão -->
+  <link rel="icon" href="/assets/img/favicon.ico">
+  <!-- ICON -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- CSS base -->
   <link rel="stylesheet" href="../assets/css/base/variaveis.css">
@@ -36,7 +45,7 @@
 
   <header>
     <a href="/index.html" class="logo-container" title="Voltar para a página inicial">
-      <img src="../assets/img/logo-300.png" alt="Logo AssociArte" />
+      <img src="../assets/img/logo-300.png" alt="Logo ASSOCIARTE" />
     </a>
 
     <nav class="header-nav">
@@ -120,7 +129,7 @@
   <footer class="rodape">
     <div class="rodape-container">
       <section class="rodape-col">
-        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da AssociArte">
+        <img src="/assets/img/logo-oficial.jpeg" alt="Logo oficial da ASSOCIARTE">
         <p>
           A <strong>ASSOCIARTE</strong> é uma associação de artesãos de Santa Maria da Vitória,
           dedicada à valorização do artesanato local, fortalecimento da cultura regional
@@ -144,7 +153,7 @@
       <section class="rodape-col">
         <h4>Redes sociais</h4>
         <a href="https://www.instagram.com/associarte5/" target="_blank" rel="noopener noreferrer"
-          aria-label="Instagram da Associação AssociArte">
+          aria-label="Instagram da Associação ASSOCIARTE">
           <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
         </a>
       </section>
