--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="9WesW6LhyKPYZtA58K9qNRNU9G7lL6tpqHa_kXm9mS0" />
     <!-- SEO principal -->
     <title>ASSOCIARTE Marketplace</title>
     <meta name="description"
